# wispr_linux_rs

./: .gitignore  Cargo.toml  IMPLEMENTATION_NOTES.md  README.md  config.toml.sample  log4rs.yaml  run_wispr.sh  test-config.toml
src/: api.rs  audio.rs  clipboard.rs  config.rs  main.rs  text_processor.rs  tray.rs  window.rs
