[package]
name = "wispr_linux_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# GUI and window
gtk = "0.18"
gdk = "0.18"
glib = "0.18"

# Audio recording
cpal = "0.15"
hound = "3.5"
symphonia = { version = "0.5", features = ["mp3", "wav"] }

# HTTP client for API interactions
reqwest = { version = "0.11", features = ["json", "multipart", "blocking"] }
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
directories = "5.0"
log = "0.4"
simple_logger = "4.3"
ctrlc = "3.4"
chrono = "0.4"
tray-icon = { version = "0.12", optional = true }
lazy_static = "1.4.0"
clap = { version = "4.4", features = ["derive"] }

[features]
default = []
tray = ["tray-icon"]
